# fem-solver-2d-poisson

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
external_libs/: libgd.tar.bz2  plplot.tar.bz2
external_libs/fem/: CMakeLists.txt  dgb.h  fem2d_poisson.c  fem_solver_debug.h
external_libs/libgd/: CMakeLists.txt  gd_gd.c  gd_io.c  gd_jpeg.c  gd_png.c  gdfontg.c  wbmp.c
external_libs/libpng/: CMakeLists.txt
external_libs/plplot/: CMakeLists.txt
external_libs/plplot/include/: disptab.h  drivers.h  plConfig.h  plplot.h  plplotP.h  plxwd.h
external_libs/plplot/qsastime/: qsastimeP.h
external_libs/plplot/src/: pdfutils.c  plarc.c  plargs.c  plbox.c  plbuf.c  plcont.c  plcvt.c  pldeprecated.c  plfill.c  plgridd.c  plhist.c  plimage.c  pllegend.c  plline.c  plsdef.c  plstripc.c  pltick.c  pltime.c
external_libs/triangle/: CMakeLists.txt  triangle.c
external_libs/zlib/: CMakeLists.txt
modules/fem/: CMakeLists.txt  dgb.c  fem2d_poisson.c  fem2d_poisson.h  prob_def.c  prob_def.h
modules/libgd/: CMakeLists.txt  config.h  gd.c  gd.h  gd_gd2.c  gd_io_dp.c  gd_io_file.c  gd_io_ss.c  gd_tiff.c  gd_wbmp.c  gdft.c  gdkanji.c  gdxpm.c
modules/libpng/: CMakeLists.txt  pngstruct.h
modules/libpng_main/: CMakeLists.txt  png_writer.c
modules/plplot/: CMakeLists.txt
modules/plplot/drivers/: gd.c
modules/plplot/fonts/: plhershey-unicode.h
modules/plplot/include/: config.h  ltdl_win32.h  pdf.h  plConfig.h  plDevs.h  plcore.h  pldebug.h  pldll.h  plfreetype.h  plstrm.h
modules/plplot/qsastime/: tai-utc.h
modules/plplot/src/: plaffine.c  plcore.c  plctrl.c  pldtik.c  plf2ops.c  plfreetype.c  plgradient.c  plmap.c  plot3d.c  plpage.c  plshade.c  plstdio.c  plsym.c  plvect.c  plvpor.c  plwind.c
modules/plplot_main/: CMakeLists.txt  interpolated_plot.c  interpolated_plot.h
modules/plplot_main/tests/: CMakeLists.txt  test_plplot.c  test_plplot.h
modules/triangle/: CMakeLists.txt  triangle.h
modules/triangle_main/: CMakeLists.txt  get_mesh.h  mesh_vis.c  mesh_vis.h  node_input.c
modules/triangle_main/tests/: CMakeLists.txt
modules/zlib/: CMakeLists.txt
src/libpng_main/: CMakeLists.txt  png_writer.c
src/main/: fem_solver.c  prob_def.c
src/plplot_main/: CMakeLists.txt  interpolated_plot.c
src/plplot_main/tests/: CMakeLists.txt  test_plplot.c
src/triangle_main/: CMakeLists.txt  get_mesh.c  node_input.h
src/triangle_main/tests/: CMakeLists.txt  test_triangle.c  test_triangle.h
